Wed Mar  7 21:51:52 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c libxslt/transform.c: a couple of nastyness
	  w.r.t. value of tree result (and attributes within it) fixed.
	* tests/xmlspec/Makefile.am tests/xmlspec/REC-xml-20001006.html:
	  Integrated the xmlspec to the test (i.e. diffed output for
	  changes).

Wed Mar  7 18:01:07 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* imports.c transform.c xslt.c xsltInternals.h: fixed a
	  strip-spaces problem
	* tests/docs/*.xml tests/general/*.[xsl,out]: added reported
	  bugs to testsuite

Wed Mar  7 13:34:13 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.[ch]: finished integrating the current
	  state of the preproc optimizations.
	* tests/xmlspec/diffspec.xsl: switched off diff printing

Wed Mar  7 12:46:09 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c libxslt/transform.c: started rolling in
	  some of the optimizations.

Tue Mar  6 19:39:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* attributes.[ch] extra.[ch] preproc.c xsltInternals.h
	  transform.[ch]: previous commit broke a lot of stuff, fixing
	  and preparing for next step

Tue Mar  6 19:03:21 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.[ch] Makefile.am templates.[ch] transform.[ch]
	  xsltInternals.h: started working on optimizing stylesheet
	  element parsing. Just builds the extra informations so far.
	* xsltutils.h: added a missing XPath decl

Tue Mar  6 09:52:13 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/variables.c: William M. Brack found a serious bug
	  with imports and global variables ...

Mon Mar  5 21:51:54 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.[ch] libxslt/transform.c: added 
	  xsltCleanupTemplates() to clean up state left after processing.

Sun Mar  4 19:03:27 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
